Fix text overflow in navbar dropdowns, Pluralize for consistency, Mobile -> Android for consistency, Whitepaper button easier to use, Iconography consistency

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,1 +1,11 @@
 /****** PLACE YOUR CUSTOM STYLES HERE ******/
+
+.menu > li > ul li a {
+	margin-left: 6px;
+}
+
+.menu > li ul {
+  min-width: 200px;
+  width: auto;
+}
+
